Added 2 moles containers + moles + dirt pile images

--- a/mole.html
+++ b/mole.html
@@ -14,5 +14,15 @@
     </div> -->
     
     <!-- Your code here -->
+    <div id="wgs">
+      <img id="wgs_mole-head" src="mole-head.png" alt="The face of a mole">
+      <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+    </div>
+
+    <div id="wgs">
+      <img id="wgs_mole-head" src="mole-head.png" alt="The face of a mole">
+      <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+    </div>
+    
   </body>
 </html>
