Added .wgs_hole-head--hidden to second div

--- a/mole.html
+++ b/mole.html
@@ -20,9 +20,9 @@
     </div>
 
     <div id="wgs">
-      <img id="wgs_mole-head" src="mole-head.png" alt="The face of a mole">
+      <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
       <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
     </div>
-    
+
   </body>
 </html>
