--- a/mole.html
+++ b/mole.html
@@ -7,22 +7,54 @@
   <body>
 
     <!-- UNCOMMENT THE CODE BELOW WHEN DIRECTED -->
-    <!-- <div class="sb">
-      <div class="sb__score-holder">Score <span class="sb__score">0</span></div>
-      <div class="sb__game-over sb__game-over--hidden">Game Over</div>
-      <div class="sb__mole-counter">Moles <span class="sb__moles">30</span></div>
-    </div> -->
+    <div class="sb">
+    <div class="sb__score-holder">Score <span class="sb__score">0</span></div>
+    <div class="sb__game-over sb__game-over--hidden">Game Over</div>
+    <div class="sb__mole-counter">Moles <span class="sb__moles">30</span></div>
     
     <!-- Your code here -->
-    <div id="wgs">
-      <img id="wgs_mole-head" src="mole-head.png" alt="The face of a mole">
-      <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
-    </div>
+    <div id="playing-field">
 
-    <div id="wgs">
-      <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
-      <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
-    </div>
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
 
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
+
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
+
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
+
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
+
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
+
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
+
+      <div id="wgs">
+        <img id="wgs_mole-head" class="wgs_mole-head--hidden" src="mole-head.png" alt="The face of a mole">
+        <img id="wgs_dirt-pile" src="mole-hill.png" alt="The hill where the head of a mole looks out of">
+      </div>
+
+    </div>
   </body>
 </html>
